<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app"
    tools:context=".makelist">

    <TextView
        android:id="@+id/textView"
        android:layout_width="244dp"
        android:layout_height="55dp"
        android:layout_marginTop="256dp"
        android:fontFamily="casual"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="#F7131212"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/rem5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.303" />

    <Button
        android:id="@+id/button3"
        android:layout_width="137dp"
        android:layout_height="63dp"
        android:background="?attr/colorBackgroundFloating"
        android:fontFamily="casual"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />
</androidx.constraintlayout.widget.ConstraintLayout>